# AdvancedNLPClasses

./: .gitignore  README.md  clean_notebook.py  mkdocs.yml  pyproject.toml
.github/workflows/: build-and-deploy.yml
bse_nlp/: __init__.py  make_pdfs.py
docs/: index.md  notebooks.md  resources.md
docs/chapter1/: README.md  Session_1_1_Python_1o1_1.md  Session_1_1_Python_1o1_2.ipynb  Session_1_1_Python_1o1_2.md  Session_1_1_Python_1o1_3.ipynb  Session_1_1_Python_1o1_3.md  Session_1_1_Python_1o1_4.ipynb  Session_1_1_Python_1o1_4.md  Session_1_1_Python_1o1_5.md  Session_1_2_baselines.ipynb  Session_1_2_baselines.md  Session_1_3_tfidf.ipynb  Session_1_3_tfidf.md  Session_1_4_BM25.md
docs/chapter10/: README.md  Session_10_1_LLM_with_Tools.ipynb  Session_10_2_LLM_as_a_Judge.ipynb  Session_10_3_ReAct_Framework.ipynb
docs/chapter2/: README.md  Session_2_1_NeuralNets_with_Numpy.ipynb  Session_2_2_Text_Generation_with_RNN.ipynb  Session_2_3_LSTM_Classif.ipynb
docs/chapter3/: README.md  Session_3_1_Word2Vec_Training.ipynb  Session_3_3_Embedding_Classification.ipynb
docs/chapter4/: README.md  Session_4.ipynb  Session_4_correction.ipynb
docs/chapter5/: README.md  Session_5_1_BERT_HF_Implementation.ipynb  Session_5_2_Attention_Visualization.ipynb
docs/chapter6/: README.md  Session_6_1_BERTopic_Topic_Modeling.ipynb  Session_6_2_Zero_Shot_Classification.ipynb  Session_6_3_Generation_with_GPT.ipynb
docs/chapter7/: README.md  Session_7_1_Gender_Bias_Detection.ipynb  Session_7_2_Cross_Language_Evaluation.ipynb  Session_7_3_reduce_BERT_model.ipynb
docs/chapter8/: README.md  Session_8.ipynb
docs/chapter9/: README.md  Session_9_1_Prompt_Engineering.ipynb  Session_9_2_RAG.ipynb
docs/evaluations/: evaluations.md  final-project.md  first-home-assignment.md  second-home-assignment.md
latex/: make_pdfs.sh
latex/chapter1/: main.tex
layouts/: math.html
notebooks/support/: Session_1_1_Python_1o1_1.ipynb  Session_1_1_Python_1o1_2.ipynb  Session_1_1_Python_1o1_3.ipynb  Session_1_1_Python_1o1_4.ipynb  Session_1_1_Python_1o1_5.ipynb  Session_1_2_baselines.ipynb  Session_1_3_tfidf.ipynb  Session_1_4_BM25.ipynb
site/: 404.html  index.html
site/chapter1/: index.html
site/chapter10/: index.html
site/chapter2/: index.html
site/chapter3/: index.html
site/chapter4/: index.html
(+43 files in other folders)
