[tool.poetry]
name = "bse-nlp"
version = "0.1.0"
description = "Project for NLP classes"
authors = ["agombert <arnault.gombert@pm.me>"]
readme = "README.md"
packages = [{include = "bse_nlp"}]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.8"
mkdocs-jupyter = "^0.25.1"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
nltk = "^3.9.1"
spacy = "^3.8.4"
datasets = "^3.4.0"
transformers = "^4.49.0"
torch = "^2.6.0"
pymdown-extensions = "^10.14.3"
numpy = "2.1"
tensorflow = "^2.19.0"
keras-tuner = "^1.4.7"
plotly = "^6.0.1"
tabulate = "^0.9.0"
tensorflow-hub = "^0.16.1"
tqdm = "^4.67.1"
fasttext = "^0.9.3"
staticvectors = "^0.2.0"
wordcloud = "^1.9.4"
lime = "^0.2.0.1"
shap = "^0.47.2"
evaluate = "^0.4.3"
accelerate = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
black = "^25.1.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
